--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,3 +26,7 @@ jobs:
 
       - store_artifacts:
           path: target/phoenix-0.1-SNAPSHOT.jar
+
+      - run: mvn dockerfile:build
+      - run: mvn dockerfile:push
+      - run: ssh $SSH_USER@$SSH_HOST "deploy_bleeding.sh"
