--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       - store_artifacts:
           path: target/phoenix-0.1-SNAPSHOT.jar
 
+      - setup_remote_docker
       - run: mvn dockerfile:build
       - run: docker login --username ${DOCKER_USERNAME} --password ${DOCKER_PASSWORD}
       - run: docker push subterranwars/phoenix:bleeding
