Use correct deploy-script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,4 @@ jobs:
       - run: mvn dockerfile:build
       - run: docker login --username ${DOCKER_USERNAME} --password ${DOCKER_PASSWORD}
       - run: docker push subterranwars/phoenix:bleeding
-      - run: ssh $SSH_USER@$SSH_HOST "deploy_bleeding.sh"
+      - run: ssh $SSH_USER@$SSH_HOST "~/deploy_bleeding.sh"
