Allow connection to the host

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,5 @@ jobs:
       - run: mvn dockerfile:build
       - run: docker login --username ${DOCKER_USERNAME} --password ${DOCKER_PASSWORD}
       - run: docker push subterranwars/phoenix:bleeding
+      - run: echo "${SSH_HOST} ${SSH_HOST_KEY}" >> ~/.ssh/known_hosts
       - run: ssh $SSH_USER@$SSH_HOST "~/deploy_bleeding.sh"
