--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ logging.level.de.stw=DEBUG
 server.port=8081
 
 de.subterranwars.auth.token.expirationInHours=24
+de.subterranwars.auth.bcrypt.strength=12
