--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,20 @@ server.port=8081
 
 de.subterranwars.auth.token.expirationInHours=24
 de.subterranwars.auth.bcrypt.strength=12
+
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/phoenix
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#show sql statement
+logging.level.org.hibernate.SQL=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
