Fix clock handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 logging.level.de.stw=DEBUG
 server.port=8081
 
-de.subterranwars.auth.token.expirationInHours=24
-de.subterranwars.auth.bcrypt.strength=12
+de.stw.auth.token.expirationInHours=24
+de.stw.auth.bcrypt.strength=12
+de.stw.clock.tickLengthInMs=10000
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
