Disable logging by default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # show sql statement
-logging.level.org.hibernate.SQL=trace
+#logging.level.org.hibernate.SQL=trace
 #logging.level.org.hibernate.type.descriptor.sql=trace
